# transport-victoria-service-updates

./: .env_template  .gitignore  Dockerfile  READme.md  docker-compose.yaml  main.py  profiles_template.yaml  pyproject.toml
app/: ingest_data copy.py  ingest_data.py  ingest_data_bkup.py
dbt/ptv_metro_service_updates/: README.md  dbt_project.yml
dbt/ptv_metro_service_updates/macros/: extract_query_json.sql  extract_scalar_json.sql  unnest_json_array.sql
dbt/ptv_metro_service_updates/models/marts/: dim_agency.sql  dim_alert_classification.sql  dim_date.sql  dim_routes.sql  dim_stops.sql  fct_service_update_impacts.sql  schema.yml
dbt/ptv_metro_service_updates/models/marts/reporting/: current_route_stop_impacts.sql  current_service_disruptions.sql  disruption_causes_summary.sql  disruption_effects_summary.sql  distribution_of_disruption_causes.sql  distribution_of_disruption_effects.sql  (+5 more)
dbt/ptv_metro_service_updates/models/staging/: sources.yml  stg_service_alerts_active_periods.sql  stg_service_alerts_base.sql  stg_service_alerts_informed_entities.sql  stg_services_entity_base.sql
dbt/ptv_metro_service_updates/seeds/: metro_routes.csv  metro_stops.csv  seed_properties.yml
dbt/ptv_metro_service_updates/tests/: test_alert_only_have_1_active_period.sql
kestra/: README.md  ingest_data.yaml  ingest_data.yml
output/: 1lfqFqR7lDKdXhagNVc3XG-service_updates_20260329_062556.ndjson
streamlit/: app.py
streamlit/pages/: 1_Overview.py  2_Active_Disruptions.py  3_Historical_Trends.py
streamlit/utils/: db.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
