[project]
name = "transport-victoria-service-updates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "gtfs-realtime-bindings>=2.0.0",
    "protobuf>=6.33.6",
    "requests>=2.33.0",
]
